Stronger error management and Redis connection
